# structarus

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/structarus/: tar_info.hpp
include/structarus/detail/: tar_to_stream.hpp  utils.hpp
tests/: CMakeLists.txt
tests/tar/: CMakeLists.txt  tar_tests.cpp
